[package]
name = "alphabet_mask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib_alphabet_mask"
path = "src/rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
alphabet_mask_models = { path = "./alphabet_mask_models" }
pyo3 = { version = "0", features = ["extension-module"] }
rayon = "1.8.1"
fxhash = "0.2.1"

[package.metadata.maturin]
python-source = "src/py"
name = "alphabet_mask.lib_alphabet_mask"
