[package]
name = "alphabet_mask_models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["python"]
python = ["dep:pyo3"]

[dependencies]
pyo3 = { version = "0", optional = true }
strum = { version = "0", features = ["derive"]}
thiserror = { version = "1" }
